--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,11 @@
     "description": "Visual improvements to IPPC.no, for reading METAR and TAF.",
     "version": "0.0.1",
     "manifest_version": 3,
-    "icons": {  "16": "icon16.png",
-                "32": "icon32.png",
-                "48": "icon48.png",
-                "64": "icon64.png",
-                "128": "icon128.png" },
+    "icons": {  "16": "static/icon16.png",
+                "32": "static/icon32.png",
+                "48": "static/icon48.png",
+                "64": "static/icon64.png",
+                "128": "static/icon128.png" },
 
     "content_scripts": [{
         "css": ["styles.css"],
